<resources>
    <string name="app_name">Braskarinn</string>

    <!--Front page buttons-->
    <string name="loginFront">Login</string>
    <string name="logoutFront">Logout</string>
    <string name="profileFront">Profile</string>
    <string name="viewadsFront">View Ads</string>

    <!--Dropdowns on title bar-->
    <string name="action_aboutus">About Braskarinn</string>
    <string name="action_faq">FAQ</string>

    <!--Burgermenu items-->
    <string name="aboutBraskarinn">About Braskarinn</string>
    <string name="aboutText">Braskarinn is a project in Software Project 2 at
    University of Iceland, spring 2017. This course focus on mobile app development.
    Braskarinn is a sales applications specifically catered towards individuals looking
    to sell their pre-owned items, or other small items, quickly and easily.</string>
    <string name="board">Board</string>
    <string name="boardnames">Anna Margrét Björnsdóttir Anton Örn Kristjánsson
    Birgir Sveinn Jakobsson Sindri Fannar Völuson</string>
    <string name="Faq">Frequently asked questions and answers</string>
    <string name="FaqText">No questions asked!</string>

    <!--Register Page-->
    <string name="registerFont">Register</string>
    <string name="nameHint">Name</string>
    <string name="passwordHint">Password</string>
    <string name="emailHint">Email</string>
    <string name="registerBut">Register</string>

    <!--Profile Page-->
    <string name="confirm_username">Confirm</string>
    <string name="hint_phone">phone</string>
    <string name="hint_username">username</string>
    <string name="userName">Placeholder</string>
    <string name="userEmail">Placeholder</string>
    <string name="userPhone">Placeholder</string>
    <string name="profileEmail">User Email: %1$s </string>
    <string name="profileUsername">User displayname: %1$s </string>

    <!--View Ads page-->
    <string name="list_ads">Auglýsingar</string>
    <string name="auglysingarFont">Advertising</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>


</resources>
