<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/userEmail" />

        <TextView
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/userPhone" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/picture_frame"
            android:orientation="horizontal"
            android:visibility="visible">

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_phone"
                android:inputType="phone" />

            <Button
                android:id="@+id/confirmPhoneNumber"
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/confirm_username"
                android:textColor="@android:color/background_light"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>