<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="is.hopur8.braskarinn.AboutActivity">

    <TextView
        android:id="@+id/aboutBraskarinn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/aboutBraskarinn"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutBraskarinn"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/aboutText"
        android:textColor="@color/GREY"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/board"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/aboutText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/boardnames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Board"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="10dp"
        android:text="@string/boardnames"
        android:textColor="@color/GREY"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>
